--- a/index.html
+++ b/index.html
@@ -7,7 +7,22 @@
   </head>
 
   <body>
-    <canvas id="glcanvas"></canvas>
+      <div class="splitBig left">
+          <div class="centered">
+              <canvas id="glcanvas"></canvas>
+          </div>
+        </div>
+        
+        <div class="splitSmall right">
+          <div class="topright">
+              <input class="notError" type="number" id="liquidViscosity" name="liquidViscosity" value=2.5 min="0.1" max="20" step=0.1>
+              <input type="submit" id="submitViscosity" value="Submit">
+
+              <input class="notError" type="number" id="noParticles" name="noParticles" value=400 min="1" max="1000000" step=100>
+              <input type="submit" id="submitNoParticles" value="Submit">
+          </div>
+        </div>
+    
   </body>
 
   <script id="3d-vertex-shader" type="x-shader/x-vertex">
