Buttons and improvement!

--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
 
               <input class="notError" type="number" id="noParticles" name="noParticles" value=400 min="1" max="1000000" step=100>
               <input type="submit" id="submitNoParticles" value="Submit">
+
+              <input class="notError" type="number" id="minBubbleSize" name="minBubbleSize" value=0.4 min="1" max="10" step=0.1>
+              <input class="notError" type="number" id="maxBubbleSize" name="maxBubbleSize" value=2.5 min="1.1" max="10" step=0.1>
+              <input type="submit" id="submitNewSizes" value="Submit">
+
+              <p id="particlesTag" class="white">Number of Particles: </p>
+
           </div>
         </div>
     
